--- a/_config.yml
+++ b/_config.yml
@@ -1,28 +1,29 @@
-title: Long Haul
-description: Long Form Jekyll theme built with SASS / COMPASS / SUSY
+title: Dat Hoang's Blog
+description: Học Machine Learning bằng JavaScript
 
-url: http://brianmaierjr.github.com/long-haul
+url: https://dathoangblog.com
 baseurl: ""
 paginate_path: "blog/page:num/"
-permalink: blog/:title/
+permalink: /:year/:month/:title.html
 
 markdown: kramdown
 highlighter: rouge
 plugins: [jekyll-paginate]
-paginate: 5
+paginate: 100
 
 navigation:
-  - title: Home
-    url: /index.html
-  - title: About
-    url: /about
-  - title: Contact
+  - title: Học
+    url: /
+  - title: Dự án
+    url: /projects
+  - title: Liên hệ
     url: /contact
+  - title: Về tôi
+    url: /about
 
 social:
-  github: brianmaierjr
-  twitter: brianmaierjr
-  facebook: brianmaierjr
-  email: brimaidesigns@gmail.com
+  github: dathoangnd
+  facebook: dathoangnd
+  email: dathoangnd@gmail.com
 
-google_analytics: "UA-58263416-1"
+google_analytics:
