Change blog to English.

--- a/_config.yml
+++ b/_config.yml
@@ -1,31 +1,59 @@
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely edit after that. If you find
+# yourself editing this file very often, consider using Jekyll's data files
+# feature for the data you need to update frequently.
+#
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
+#
+# If you need help with YAML syntax, here are some quick references for you:
+# https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
+# https://learnxinyminutes.com/docs/yaml/
+#
+# Site settings
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.
+
 title: Dat Hoang's Blog
-description: Học Machine Learning bằng JavaScript
+tagline: Sharing what I learn about coding, entrepreneurship, and life.
+author: Dat Hoang
+email: dathoangnd@gmail.com
+description: >- # this means to ignore newlines until "baseurl:"
+  A blog by Dat Hoang — just a developer trying to make things work and sharing what I learn about coding, entrepreneurship, and life.
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://dathoang.dev" # the base hostname & protocol for your site, e.g. http://example.com
+facebook_username: dathoangnd
+github_username:  dathoangnd
 
-url: https://www.dathoangblog.com
-baseurl: ""
-paginate_path: "blog/page:num/"
-permalink: /:year/:month/:title.html
+disqus:
+  shortname: dathoang
 
-markdown: kramdown
-highlighter: rouge
-plugins: [jekyll-paginate]
-paginate: 100
+# Build settings
+theme: minima
+plugins:
+  - jekyll-feed
+  - jekyll-seo-tag
 
-navigation:
-  - title: Nhật ký
-    url: /
-  - title: Machine Learning
-    url: /machine-learning
-  - title: Dự án
-    url: /projects
-  - title: Liên hệ
-    url: /contact
-  - title: Về tôi
-    url: /about
-
-social:
-  github: dathoangnd
-  facebook: dathoangnd
-  email: dathoangnd@gmail.com
-
-google_analytics:
+# Exclude from processing.
+# The following items will not be processed, by default.
+# Any item listed under the `exclude:` key here will be automatically added to
+# the internal "default list".
+#
+# Excluded items can be processed by explicitly listing the directories or
+# their entries' file path in the `include:` list.
+#
+# exclude:
+#   - .sass-cache/
+#   - .jekyll-cache/
+#   - gemfiles/
+#   - Gemfile
+#   - Gemfile.lock
+#   - node_modules/
+#   - vendor/bundle/
+#   - vendor/cache/
+#   - vendor/gems/
+#   - vendor/ruby/
